result list scrolling overflow bug fixed

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@
     inset 0 0.09375em 0.03125em rgb(255 255 255 / 0.2),
     0 0.0625em 0.0625em rgb(0 0 0 / 0.3);
 }
+body {
+  overflow: hidden;
+}
 
 .main {
   display: flex;
@@ -46,16 +49,18 @@
   height: 500px;
   color: var(--primary-text-color);
   flex-direction: column;
-  justify-content: center;
   font-size: 2rem;
-  align-items: left;
   padding-left: 1rem;
+  margin-top: 0;
+  scrollbar-width: thin;
+  overflow-y: scroll;
   gap: 1rem;
 }
 
 .results-list {
   display: flex;
   flex-direction: column-reverse;
+  height: fit-content;
   list-style: none;
   padding: 0;
   margin: 0;
